# dash-board

./: .env  .gitignore  Cargo.toml  README.md  bsconfig.json  build.sbt  index.html  jest.config.js  main.org  package.json  pnpm-lock.yaml  postcss.config.js  postgre.session.sql  tailwind.config.js  vite.config.js
app/controllers/: OsController.scala
conf/: routes
src/: lib.rs  main.rs
src/bean/: mod.rs  user.rs
src/controller/: file.rs  mod.rs  os.rs  static.rs  verify.rs
src/dao/: mod.rs  verify_code.rs
src/middleware/: cors.rs  mod.rs
src/service/: shell.rs
src/tools/: crypto.rs  error.rs  file_type.rs  mod.rs  os_type.rs
src/tools/interpreter/: mod.rs
src/tools/logger/: log.rs  time.rs
src/tools/proc/: cpu_info.rs  cpu_stat.rs  mem_info.rs  mod.rs
test/controllers/: HomeControllerSpec.scala
test/web/: ShellTest.test.res
web/: App.res  index.res
web/components/: Link.res  Redirect.res
web/hooks/: Hook.res
web/pages/: DashBoard.res  Home.res  NotFound.res  Terminal.res  Verify.res
web/state/: Permission.res
web/styles/: global.module.css  shell.module.css
web/utils/: Context.res  Route.res  Shell.res  Shell.resi
