[package]
name = "serverd"
version = "0.1.0"
authors = ["lovebaihezi <x18739168862@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.101"
actix = "0.12.0"
actix-web = "4.0.0-beta.10"
actix-web-actors = "4.0.0-beta.7"
openssl = { version = "0.10", features = ["v110"] }
openssl-sys = "0.9"
serde_json = "1.0"
serde="1.0"
colored = "2"
chrono = "0.4"
tokio-postgres = "0.7.2"
postgres-types = "0.2.1"
futures-util = "0.3.16"
libc_tools = "0.1.3"
tokio = {version = "1.12.0", features = ["full"] }
deadpool-postgres = "0.9.0"
deadpool-redis = "0.9.0"
crossbeam = "0.8"
qrcodegen = "1.7.0"
actix-service = "2.0.0"
oauth2 = "4.1"
google-authenticator = "0.2.1"
hmac-sha1 = "0.1"
actix-multipart = "0.4.0-beta.6"
rayon = "*"
regex = "*"
tracing = "0.1"
tracing-subscriber = "0.2"
[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
