[package]
name = "dashboard"
version = "0.1.1"
authors = ["lovebaihezi <x18739168862@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
actix = "0.12"
actix-web = "4.0.0-rc.1"
actix-web-actors = "4.0.0-beta.11"
openssl = { version = "0.10", features = ["v110"] }
openssl-sys = "0.9"
serde_json = "1.0"
serde="1.0"
colored = "2"
chrono = "0.4"
postgres-types = "0.2"
futures-util = "0.3"
libc_tools = "0.1"
tokio = {version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" , "time", "uuid", "json", "macros"] }
async-graphql-actix-web = "3"
crossbeam = "0.8"
qrcodegen = "1"
actix-service = "2"
oauth2 = "4"
google-authenticator = "0.3"
hmac-sha1 = "0.1"
actix-multipart = "0.4.0-beta.13"
rayon = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-appender = "0.2"
[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
